# cosmap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: autotag.yml  ci.yml
cosmap/: entrypoint.py  locations.py
cosmap/analysis/: __init__.py  analysis.py  base_analysis.json  check.py  dependencies.py  errors.py  files.json  manage.py  plugins.py  run_analysis.py  sampler.py  scheduler.py  setup.py  task.py  transformation.py  utils.py
cosmap/api/: cmds.py
cosmap/config/: analysis.py  block.py  config.py  custom.py  known_models.json  model.py  parameters.py  utils.py
cosmap/config/models/: __init__.py  geometry.py  model.py  sky.py  test.py
cosmap/dataset/: __init__.py  plugins.py  wrappers.py
cosmap/output/: __init__.py  output.py  parser.py  writer.py
cosmap/plugins/: __init__.py  add.py  base.py  manage.py  manager.py  register.py  request.py
docs/: conf.py  index.rst
src/cosmap/: entrypoint.py
src/cosmap/analysis/: errors.py  known_analyses.json  manage.py  plugins.py  sampler.py  setup.py  task.py  transformation.py
src/cosmap/config/: analysis.py  utils.py
src/cosmap/config/models/: __init__.py  sky.py
src/cosmap/dataset/: opencosmo.py  plugins.py
src/cosmap/output/: __init__.py  output.py  parser.py
src/cosmap/plugins/: __init__.py  manage.py  plugins.json
