[project]
name = "cosmap"
version = "0.2.8"
description = ""
authors = [{name = "Patrick Wells", email="patrick@astropatty.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "dask[distributed]>=2023.4.0",
    "networkx>=3.1",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
    "click>=8.1.3",
    "pluggy>=1.2.0",
    "astropy (>=7.0.1,<8.0.0)",
    "heinlein (>=0.10.8, <0.11.0)"
]

[project.scripts]
cosmap = "cosmap.entrypoint:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
black = "^23.7.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
