[project]
name = "cosmap"
version = "0.4.3"
description = ""
authors = [{ name = "Patrick Wells", email = "patrick@astropatty.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "loguru>=0.7.0",
    "dask[distributed]>=2023.4.0",
    "networkx>=3.1",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
    "click>=8.1.3",
    "pluggy>=1.2.0",
    "astropy (>=7.0.1,<8.0.0)",
    "heinlein (>=0.10.8, <0.11.0)",
    "opencosmo>=1.1.3",
]

[project.scripts]
cosmap = "cosmap.entrypoint:cli"

[dependency-groups]
dev = [
    "ruff>=0.0.285,<0.0.286",
    "black>=23.7.0,<24",
    "pre-commit>=3.3.3,<4",
    "isort>=5.12.0,<6",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"
